# payment-gateway

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  deploy.sh  docker-compose.local.yml  docker-compose.yml  env.example  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 001_add_subscription_models.py
gateway/: __init__.py  db.py  main.py  schemas.py  worker.py
gateway/core/: auth.py  bootstrap.py  constants.py  exceptions.py  logging.py  models.py  responses.py  schemas.py  settings.py
gateway/providers/: __init__.py  alipay.py  base.py  stripe.py  wechatpay.py
gateway/routers/: admin.py  callbacks.py  payments.py  plans.py  subscriptions.py
gateway/services/: apps.py  callbacks.py  payments.py  plans.py  refunds.py  subscriptions.py
gateway/static/: api_test.html
k8s/: gateway.yaml  prod.yaml  tgb.yaml
tests/alipay/: test_alipay.py
tests/pay/: test_alipay.py  test_stripe.py
tests/subscription/: conftest.py  test_subscription_service.py
